# MSR-Task

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: evaluate.py  inference.py  serve_model.py  serve_model_local.py
